--- a/goban_classic.css
+++ b/goban_classic.css
@@ -3,50 +3,50 @@
   display:            inline-block;	
   padding:            12px;
   position:           relative;
-  background:         url( http://www.dragongoserver.net/images/wood1.gif );
+  background:         url( ./static/wood1.gif );
   -moz-box-shadow:    inset 0 0 25px #333333;
   -webkit-box-shadow: inset 0 0 25px #333333;
   box-shadow:         inset 0 0 25px #333333;
 }
-.goban .action,
+.goban .content,
 .goban .cell {
   float:              left;	
   width:              25px;
   height:             25px;
 }
 .goban .cell {
-  background:         url( http://www.dragongoserver.net/25/e.gif );
+  background:         url( ./static/e.gif );
 }
 .goban .cell.first_col {
-  background:         url( http://www.dragongoserver.net/25/el.gif );
+  background:         url( ./static/el.gif );
   clear:              left;
 }
 .goban .cell.last_col {   
-  background:         url( http://www.dragongoserver.net/25/er.gif );
+  background:         url( ./static/er.gif );
 }
 .goban .cell.first_row {
-  background:         url( http://www.dragongoserver.net/25/u.gif );
+  background:         url( ./static/u.gif );
 }   
 .goban .cell.last_row {   
-  background:         url( http://www.dragongoserver.net/25/d.gif );
+  background:         url( ./static/d.gif );
 }  
 .goban .cell.first_col.first_row {
-  background:         url( http://www.dragongoserver.net/25/ul.gif );
+  background:         url( ./static/ul.gif );
 }   
 .goban .cell.first_col.last_row {   
-  background:         url( http://www.dragongoserver.net/25/dl.gif );
+  background:         url( ./static/dl.gif );
 }   
 .goban .cell.last_col.first_row {
-  background:         url( http://www.dragongoserver.net/25/ur.gif );
+  background:         url( ./static/ur.gif );
 }
 .goban .cell.last_col.last_row {
-  background:         url( http://www.dragongoserver.net/25/dr.gif );
+  background:         url( ./static/dr.gif );
 }
 .goban .stone.black {
-  background:         url( http://www.dragongoserver.net/25/b.gif );
+  background:         url( ./static/b.gif );
 }
 .goban .stone.white {
-  background:         url( http://www.dragongoserver.net/25/w.gif );
+  background:         url( ./static/w.gif );
 }
 .goban .action {
   text-decoration:    none;
