--- a/public/stylesheet/goban_classic.css
+++ b/public/stylesheet/goban_classic.css
@@ -16,7 +16,7 @@
 .goban .cell {
   float:              left;
   background-repeat:  no-repeat;
-  background-size:    100%;
+  background-size:    100% 100%;
 }
 .goban .action {
   text-decoration:    none;
@@ -34,8 +34,8 @@
 }
 .goban_13 .content,
 .goban_13 .cell {
-  width:              32px;
-  height:             32px;
+  width:              33px;
+  height:             33px;
 }
 .goban_13 .board {
   padding:            16px 16px 15px 15px;
