--- a/public/stylesheet/goban.css
+++ b/public/stylesheet/goban.css
@@ -1,14 +1,26 @@
+a {
+    color: #AD7E1F;
+}
+a:hover {
+    color: #6C4F13;
+}
+h1 a:hover,
+h1 a {
+    color: black;
+}
+.btn.primary {
+    background-color: #AD7E1F;
+    background-image: -moz-linear-gradient(center top , #D99D26, #AD7E1F);
+}
+
 .container {
-    width: 460px;
+    width: 500px;
 }
 .page-header {
     margin: 18px 0;
 }
 .page-header h1 {
     margin: 8px 0;
-}
-h1 a {
-    color: black;
 }
 .actions {
     text-align: right;
