--- a/public/stylesheet/goban_classic.css
+++ b/public/stylesheet/goban_classic.css
@@ -4,6 +4,7 @@
 .goban .board {
   display:            inline-block;
   font-size:          0;
+  padding:            12px;
   position:           relative;
   background-image:   url( ../image/bois2.png );
   -moz-box-shadow:    inset 0 0 25px #333333;
