Update form and title style.

--- a/public/stylesheet/goban.css
+++ b/public/stylesheet/goban.css
@@ -21,11 +21,22 @@ input:focus, textarea:focus {
     width: 500px;
 }
 .page-header {
-    margin: 18px 0;
+    margin: 0 0 18px;
+    padding: 9px 9px 0;
+    background: #F5F5F5;
 }
 .page-header h1 {
     margin: 8px 0;
 }
+section .page-header {
+    margin: 0 0 9px;
+}
+.input-xlarge, input.xlarge, textarea.xlarge, select.xlarge {
+    width: 330px;
+}
 .actions {
     text-align: right;
+    background: transparent;
+    margin: 18px 0 0;
+    padding: 0 10px 18px 20px;
 }
