--- a/public/stylesheet/goban.css
+++ b/public/stylesheet/goban.css
@@ -29,7 +29,7 @@ input:focus, textarea:focus {
     margin: 8px 0;
 }
 section .page-header {
-    margin: 0 0 9px;
+    margin: 18px 0 9px;
 }
 .input-xlarge, input.xlarge, textarea.xlarge, select.xlarge {
     width: 330px;
@@ -40,4 +40,7 @@ section .page-header {
     margin: 18px 0 0;
     border: none;
     padding: 0 10px 18px 20px;
+}
+span4 {
+    width: 240px;
 }
