--- a/public/stylesheet/goban.css
+++ b/public/stylesheet/goban.css
@@ -11,6 +11,7 @@ h1 a {
 .btn.primary {
     background-color: #AD7E1F;
     background-image: -moz-linear-gradient(center top , #D99D26, #AD7E1F);
+    background-image: -webkit-linear-gradient(center top , #D99D26, #AD7E1F);
 }
 input:focus, textarea:focus {
     border-color: rgba(173, 126, 31, 0.8);
